<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|clip_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="271dp"
            android:layout_height="223dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="40dp"
            app:srcCompat="@drawable/meteor" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|end"
            android:text="@string/button_start"
            app:backgroundTint="#6200EA" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|end"
            android:text="@string/button_config"
            app:backgroundTint="#6200EA" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|end"
            android:onClick="run_about"
            android:text="@string/button_more_info"
            app:backgroundTint="#6200EA" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|end"
            android:onClick="run_exit"
            android:text="@string/button_quit"
            app:backgroundTint="#6200EA" />
    </LinearLayout>

</RelativeLayout>